# scikit-radar

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/examples/: SAR_example.ipynb  cfar_threshold.ipynb  single_moving_target_relative_Doppler.ipynb  single_static_target.ipynb  single_static_target.py  single_static_target_DOA_ULA.ipynb
skradar/: __init__.py  misc.py  process.py  radar_scene.py  sim.py
skradar/detection/: cfar.py
